--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -4,41 +4,38 @@ on:
   push:
     branches:
       - main
-    # Le chemin est maintenant _posts pour correspondre à Jekyll
     paths:
       - '_posts/**.md'
   workflow_dispatch:
 
-# Permissions nécessaires pour que l'action puisse publier sur GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  # TÂCHE 1 : PRÉPARER ET ENVOYER LA NEWSLETTER PAR E-MAIL
-  send_email_newsletter:
+  # TÂCHE 1 : PRÉPARER ET TESTER L'E-MAIL
+  prepare_and_test_email:
     name: 1. Préparer et Tester l'E-mail (Mailchimp)
     runs-on: ubuntu-latest
     outputs:
       campaign_id: ${{ steps.create_campaign.outputs.campaign_id }}
       skipped: ${{ steps.create_campaign.outputs.skipped }}
     steps:
+      # (Vos étapes de préparation de la campagne Mailchimp restent ici)
+      # ... Checkout, Set up Python, Install dependencies, Create Campaign, Send Test ...
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests markdown beautifulsoup4
-
       - name: Create Campaign and Add Content
         id: create_campaign
         env:
@@ -54,26 +51,21 @@ jobs:
           python -c "
           import os, sys, requests, json, markdown, subprocess
           from bs4 import BeautifulSoup
-
           newsletter_file = None
           try:
               before_sha = os.environ.get('BEFORE_SHA')
               after_sha = os.environ.get('AFTER_SHA')
               git_command = f'git diff --name-only {before_sha} {after_sha} | grep \"_posts/.*\\.md$\"'
               result = subprocess.run(git_command, shell=True, check=True, capture_output=True, text=True)
-              # On prend le premier élément [0] de la liste pour avoir une chaîne de caractères
               newsletter_file = result.stdout.strip().split('\n')[0]
           except (subprocess.CalledProcessError, IndexError):
               pass
-          
           if not newsletter_file:
               print('Aucun fichier .md trouvé dans le dossier /_posts pour ce commit. Annulation du workflow.')
               print(f'::set-output name=skipped::true')
               sys.exit(0)
-
           print(f'Fichier de newsletter trouvé : {newsletter_file}')
           print(f'::set-output name=skipped::false')
-
           API_KEY = os.environ.get('MAILCHIMP_API_KEY')
           AUDIENCE_ID = os.environ.get('MAILCHIMP_AUDIENCE_ID')
           SERVER_PREFIX = os.environ.get('MAILCHIMP_SERVER_PREFIX')
@@ -83,16 +75,13 @@ jobs:
           HEADERS = {'Authorization': f'Bearer {API_KEY}'}
           from_name = os.environ.get('MAILCHIMP_FROM_NAME')
           reply_to_email = os.environ.get('MAILCHIMP_REPLY_TO_EMAIL')
-
           with open(newsletter_file, 'r', encoding='utf-8') as f:
               content_lines = f.readlines()
               markdown_content = ''
-              # Logique pour ignorer l'en-tête 'front matter' de Jekyll
               in_front_matter = False
-              if content_lines[0].strip() == '---':
+              if content_lines and content_lines[0].strip() == '---':
                   in_front_matter = True
-                  content_lines.pop(0) # on enlève la première ligne ---
-              
+                  content_lines.pop(0)
               for line in content_lines:
                   if in_front_matter and line.strip() == '---':
                       in_front_matter = False
@@ -100,11 +89,9 @@ jobs:
                   if not in_front_matter:
                       markdown_content += line
               html_content = markdown.markdown(markdown_content)
-          
           soup = BeautifulSoup(html_content, 'html.parser')
           email_subject = soup.find('h1').text if soup.find('h1') else 'Ma Nouvelle Newsletter'
           print(f'Sujet de l\'email détecté : {email_subject}')
-
           campaign_data = {'type': 'regular', 'recipients': {'list_id': AUDIENCE_ID}, 'settings': {'subject_line': email_subject, 'from_name': from_name, 'reply_to': reply_to_email, 'template_id': TEMPLATE_ID}}
           try:
               r = requests.post(f'{API_URL}/campaigns', headers=HEADERS, json=campaign_data)
@@ -114,7 +101,6 @@ jobs:
               print(f'::set-output name=campaign_id::{campaign_id}')
           except Exception as e:
               print(f'Erreur lors de la création de la campagne: {e}'); sys.exit(1)
-          
           content_data = {'template': {'id': TEMPLATE_ID, 'sections': {MC_EDIT_REGION_NAME: html_content}}}
           try:
               requests.put(f'{API_URL}/campaigns/{campaign_id}/content', headers=HEADERS, json=content_data).raise_for_status()
@@ -122,7 +108,6 @@ jobs:
           except Exception as e:
               print(f'Erreur lors de l\'injection du contenu: {e}'); sys.exit(1)
           "
-
       - name: Send Test Email
         if: steps.create_campaign.outputs.skipped != 'true'
         env:
@@ -148,11 +133,11 @@ jobs:
               print(f'Erreur lors de l\'envoi du test : {e}'); sys.exit(1)
           "
 
-  # TÂCHE 2 : GÉRER L'APPROBATION ET L'ENVOI FINAL
-  send_to_production:
+  # TÂCHE 2 : APPROBATION ET ENVOI FINAL DE L'E-MAIL
+  send_final_email:
     name: 2. Approbation et Envoi Final (Mailchimp)
-    needs: send_email_newsletter
-    if: needs.send_email_newsletter.outputs.skipped != 'true'
+    needs: prepare_and_test_email
+    if: needs.prepare_and_test_email.outputs.skipped != 'true'
     environment: Production
     runs-on: ubuntu-latest
     steps:
@@ -160,7 +145,7 @@ jobs:
         env:
           MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
           MAILCHIMP_SERVER_PREFIX: ${{ secrets.MAILCHIMP_SERVER_PREFIX }}
-          CAMPAIGN_ID: ${{ needs.send_email_newsletter.outputs.campaign_id }}
+          CAMPAIGN_ID: ${{ needs.prepare_and_test_email.outputs.campaign_id }}
         run: |
           python -c "
           import os, requests, sys
@@ -181,7 +166,7 @@ jobs:
         env:
           MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
           MAILCHIMP_SERVER_PREFIX: ${{ secrets.MAILCHIMP_SERVER_PREFIX }}
-          CAMPAIGN_ID: ${{ needs.send_email_newsletter.outputs.campaign_id }}
+          CAMPAIGN_ID: ${{ needs.prepare_and_test_email.outputs.campaign_id }}
         run: |
           python -c "
           import os, requests
@@ -198,9 +183,12 @@ jobs:
               print(f'Erreur lors de la suppression de la campagne brouillon : {e}')
           "
 
-  # TÂCHE 3 : CONSTRUIRE LE SITE WEB STATIQUE
+  # TÂCHE 3 : CONSTRUIRE LE SITE WEB STATIQUE (APRÈS L'ENVOI DE L'E-MAIL)
   build_site:
     name: 3. Construire le Site (GitHub Pages)
+    # --- LA CORRECTION EST ICI ---
+    # Cette tâche ne démarre qu'APRES le succès de l'envoi final de l'e-mail.
+    needs: send_final_email
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -227,4 +215,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        
