--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -14,7 +14,7 @@ permissions:
   id-token: write
 
 jobs:
-  # TÂCHE 1 : PRÉPARER ET TESTER L'E-MAIL
+  # TÂCHE 1 : PRÉPARER L'E-MAIL ET LANCER LE TEST
   prepare_and_test_email:
     name: 1. Préparer et Tester l'E-mail (Mailchimp)
     runs-on: ubuntu-latest
@@ -22,20 +22,21 @@ jobs:
       campaign_id: ${{ steps.create_campaign.outputs.campaign_id }}
       skipped: ${{ steps.create_campaign.outputs.skipped }}
     steps:
-      # (Vos étapes de préparation de la campagne Mailchimp restent ici)
-      # ... Checkout, Set up Python, Install dependencies, Create Campaign, Send Test ...
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests markdown beautifulsoup4
+
       - name: Create Campaign and Add Content
         id: create_campaign
         env:
@@ -51,6 +52,7 @@ jobs:
           python -c "
           import os, sys, requests, json, markdown, subprocess
           from bs4 import BeautifulSoup
+
           newsletter_file = None
           try:
               before_sha = os.environ.get('BEFORE_SHA')
@@ -60,12 +62,15 @@ jobs:
               newsletter_file = result.stdout.strip().split('\n')[0]
           except (subprocess.CalledProcessError, IndexError):
               pass
+          
           if not newsletter_file:
               print('Aucun fichier .md trouvé dans le dossier /_posts pour ce commit. Annulation du workflow.')
               print(f'::set-output name=skipped::true')
               sys.exit(0)
+
           print(f'Fichier de newsletter trouvé : {newsletter_file}')
           print(f'::set-output name=skipped::false')
+
           API_KEY = os.environ.get('MAILCHIMP_API_KEY')
           AUDIENCE_ID = os.environ.get('MAILCHIMP_AUDIENCE_ID')
           SERVER_PREFIX = os.environ.get('MAILCHIMP_SERVER_PREFIX')
@@ -75,6 +80,7 @@ jobs:
           HEADERS = {'Authorization': f'Bearer {API_KEY}'}
           from_name = os.environ.get('MAILCHIMP_FROM_NAME')
           reply_to_email = os.environ.get('MAILCHIMP_REPLY_TO_EMAIL')
+
           with open(newsletter_file, 'r', encoding='utf-8') as f:
               content_lines = f.readlines()
               markdown_content = ''
@@ -89,9 +95,11 @@ jobs:
                   if not in_front_matter:
                       markdown_content += line
               html_content = markdown.markdown(markdown_content)
+
           soup = BeautifulSoup(html_content, 'html.parser')
           email_subject = soup.find('h1').text if soup.find('h1') else 'Ma Nouvelle Newsletter'
           print(f'Sujet de l\'email détecté : {email_subject}')
+
           campaign_data = {'type': 'regular', 'recipients': {'list_id': AUDIENCE_ID}, 'settings': {'subject_line': email_subject, 'from_name': from_name, 'reply_to': reply_to_email, 'template_id': TEMPLATE_ID}}
           try:
               r = requests.post(f'{API_URL}/campaigns', headers=HEADERS, json=campaign_data)
@@ -101,6 +109,7 @@ jobs:
               print(f'::set-output name=campaign_id::{campaign_id}')
           except Exception as e:
               print(f'Erreur lors de la création de la campagne: {e}'); sys.exit(1)
+          
           content_data = {'template': {'id': TEMPLATE_ID, 'sections': {MC_EDIT_REGION_NAME: html_content}}}
           try:
               requests.put(f'{API_URL}/campaigns/{campaign_id}/content', headers=HEADERS, json=content_data).raise_for_status()
@@ -108,6 +117,7 @@ jobs:
           except Exception as e:
               print(f'Erreur lors de l\'injection du contenu: {e}'); sys.exit(1)
           "
+
       - name: Send Test Email
         if: steps.create_campaign.outputs.skipped != 'true'
         env:
@@ -118,18 +128,43 @@ jobs:
         run: |
           python -c "
           import os, requests, json, sys
+
           API_KEY = os.environ.get('MAILCHIMP_API_KEY')
           SERVER_PREFIX = os.environ.get('MAILCHIMP_SERVER_PREFIX')
           CAMPAIGN_ID = os.environ.get('CAMPAIGN_ID')
           test_emails_str = os.environ.get('MAILCHIMP_TEST_EMAIL')
-          test_emails_list = test_emails_str.split(',')
+
+          # --- DÉBUT DES LOGS DE DÉBOGAGE ---
+          print('--- DEBUG: Contenu brut du secret MAILERCHIMP_TEST_EMAIL ---')
+          print(repr(test_emails_str)) # repr() va montrer les caractères cachés comme '\n'
+          
+          # On nettoie la chaîne d'e-mails pour être plus robuste
+          test_emails_list = [email.strip() for email in test_emails_str.split(',') if email.strip()]
+          
+          print('--- DEBUG: Liste des e-mails après nettoyage et split ---')
+          print(test_emails_list)
+          # --- FIN DES LOGS DE DÉBOGAGE ---
+
           API_URL = f'https://{SERVER_PREFIX}.api.mailchimp.com/3.0/'
-          HEADERS = {'Authorization': f'Bearer {API_KEY}'}
-          test_data = {'test_emails': test_emails_list, 'send_type': 'html'}
+          HEADERS = {'Authorization': f'Bearer {API_KEY}', 'Content-Type': 'application/json'}
+          
+          test_data = {
+              'test_emails': test_emails_list,
+              'send_type': 'html'
+          }
+
+          # --- LOG FINAL AVANT ENVOI ---
+          print('--- DEBUG: Données JSON envoyées à Mailchimp ---')
+          print(json.dumps(test_data, indent=2))
+          
           try:
               requests.post(f'{API_URL}/campaigns/{CAMPAIGN_ID}/actions/test', headers=HEADERS, json=test_data).raise_for_status()
               print(f'Email de test envoyé avec succès à : {test_emails_list}')
           except Exception as e:
+              # Affiche la réponse complète de l'API en cas d'erreur
+              if hasattr(e, 'response') and e.response is not None:
+                  print('--- ERREUR DÉTAILLÉE DE L\'API MAILCHIMP ---')
+                  print(e.response.text)
               print(f'Erreur lors de l\'envoi du test : {e}'); sys.exit(1)
           "
 
@@ -183,11 +218,9 @@ jobs:
               print(f'Erreur lors de la suppression de la campagne brouillon : {e}')
           "
 
-  # TÂCHE 3 : CONSTRUIRE LE SITE WEB STATIQUE (APRÈS L'ENVOI DE L'E-MAIL)
+  # TÂCHE 3 : CONSTRUIRE LE SITE WEB STATIQUE
   build_site:
     name: 3. Construire le Site (GitHub Pages)
-    # --- LA CORRECTION EST ICI ---
-    # Cette tâche ne démarre qu'APRES le succès de l'envoi final de l'e-mail.
     needs: send_final_email
     runs-on: ubuntu-latest
     steps:
@@ -215,3 +248,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+        
