--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Le fil d'Ariane
-author: Votre Nom
-email: votre.email@domaine.com
+author: Valéry Farcy
+email: hello@domaine.com
 description: >-
   Une exploration au carrefour de la philosophie, de l'IA, de la systémique et de la zététique.
 
