--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -255,3 +255,33 @@ jobs:
         uses: actions/deploy-pages@v4
 
         
+# --- NOUVELLE TÂCHE ---
+  # TÂCHE 5 : RÉPLIQUER LE SITE SUR OVH
+  replicate_to_ovh:
+    name: 5. Répliquer sur OVH (SFTP)
+    # Ne démarre qu'après le succès du déploiement sur GitHub Pages
+    needs: deploy_to_github_pages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        # On récupère le site qui a été construit à l'étape 3
+        uses: actions/download-pages-artifact@v3
+
+      - name: Deploy to OVH via SFTP
+        # On utilise une action populaire pour le déploiement SFTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          # Informations du serveur lues depuis les secrets
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          protocol: sftp # Important: protocole sécurisé
+          port: 22 # Port par défaut pour SFTP
+
+          # Dossiers source et destination
+          local-dir: ./ # Le dossier où l'artefact a été téléchargé
+          remote-dir: ${{ secrets.REMOTE_PATH }} # Le dossier 'www' sur votre serveur
+          
+          # Option pour nettoyer le dossier de destination avant le transfert
+          cleanup: true
+          
