Update dependency for OVH replication task
Changed dependency from 'deploy_to_github_pages' to 'build_site' for OVH replication task.

--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -260,7 +260,7 @@ jobs:
   replicate_to_ovh:
     name: 5. Répliquer sur OVH (SFTP)
     # Ne démarre qu'après le succès du déploiement sur GitHub Pages
-    needs: deploy_to_github_pages
+    needs: build_site
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
