--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -1,4 +1,4 @@
-name: Envoyer la Newsletter et Déployer le Site
+name: Envoyer la Newsletter et Déployer les Sites
 
 on:
   push:
@@ -17,18 +17,20 @@ jobs:
   # TÂCHE 1 : PRÉPARER L'E-MAIL ET LANCER LE TEST
   prepare_and_test_email:
     name: 1. Préparer et Tester l'E-mail (Mailchimp)
+    # La condition pour sauter l'envoi d'e-mail
+    if: "!contains(github.event.head_commit.message, '[skip-email]')"
     runs-on: ubuntu-latest
     outputs:
       campaign_id: ${{ steps.create_campaign.outputs.campaign_id }}
       skipped: ${{ steps.create_campaign.outputs.skipped }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
@@ -57,18 +59,23 @@ jobs:
           try:
               before_sha = os.environ.get('BEFORE_SHA')
               after_sha = os.environ.get('AFTER_SHA')
-              git_command = f'git diff --name-only {before_sha} {after_sha} | grep \"_posts/.*\\.md$\"'
+              null_sha = '0000000000000000000000000000000000000000'
+              git_command = ''
+              if before_sha == null_sha:
+                  git_command = f'git ls-tree --name-only -r {after_sha} | grep \"_posts/.*\\\\.md$\"'
+              else:
+                  git_command = f'git diff --name-only {before_sha} {after_sha} | grep \"_posts/.*\\\\.md$\"'
               result = subprocess.run(git_command, shell=True, check=True, capture_output=True, text=True)
               newsletter_file = result.stdout.strip().split('\n')[0]
           except (subprocess.CalledProcessError, IndexError):
               pass
           
           if not newsletter_file:
-              print('Aucun fichier .md trouvé dans le dossier /_posts pour ce commit. Annulation du workflow.')
+              print('Aucun fichier .md trouvé... Annulation.')
               print(f'::set-output name=skipped::true')
               sys.exit(0)
 
-          print(f'Fichier de newsletter trouvé : {newsletter_file}')
+          print(f'Fichier trouvé : {newsletter_file}')
           print(f'::set-output name=skipped::false')
 
           API_KEY = os.environ.get('MAILCHIMP_API_KEY')
@@ -81,10 +88,10 @@ jobs:
           from_name = os.environ.get('MAILCHIMP_FROM_NAME')
           reply_to_email = os.environ.get('MAILCHIMP_REPLY_TO_EMAIL')
 
-          # --- DÉBUT DES LIGNES DE DÉBOGAGE ---
+          # --- DÉBUT DES LIGNES DE DÉBOGAGE (CONSERVÉES) ---
           print('--- DEBUG: Contenu brut du secret MAILERCHIMP_FROM_NAME ---')
           print(repr(from_name))
-          # --- FIN DES LIGNES DE DÉBOGAGE --
+          # --- FIN DES LIGNES DE DÉBOGAGE ---
           
           with open(newsletter_file, 'r', encoding='utf-8') as f:
               content_lines = f.readlines()
@@ -103,8 +110,6 @@ jobs:
 
           soup = BeautifulSoup(html_content, 'html.parser')
           email_subject = soup.find('h1').text if soup.find('h1') else 'Ma Nouvelle Newsletter'
-          print(f'Sujet de l\'email détecté : {email_subject}')
-
           campaign_data = {'type': 'regular', 'recipients': {'list_id': AUDIENCE_ID}, 'settings': {'subject_line': email_subject, 'from_name': from_name, 'reply_to': reply_to_email, 'template_id': TEMPLATE_ID}}
           try:
               r = requests.post(f'{API_URL}/campaigns', headers=HEADERS, json=campaign_data)
@@ -118,7 +123,7 @@ jobs:
           content_data = {'template': {'id': TEMPLATE_ID, 'sections': {MC_EDIT_REGION_NAME: html_content}}}
           try:
               requests.put(f'{API_URL}/campaigns/{campaign_id}/content', headers=HEADERS, json=content_data).raise_for_status()
-              print('Contenu injecté dans le template avec succès.')
+              print('Contenu injecté avec succès.')
           except Exception as e:
               print(f'Erreur lors de l\'injection du contenu: {e}'); sys.exit(1)
           "
@@ -139,13 +144,10 @@ jobs:
           CAMPAIGN_ID = os.environ.get('CAMPAIGN_ID')
           test_emails_str = os.environ.get('MAILCHIMP_TEST_EMAIL')
 
-          # --- DÉBUT DES LOGS DE DÉBOGAGE ---
+          # --- DÉBUT DES LOGS DE DÉBOGAGE (CONSERVÉS) ---
           print('--- DEBUG: Contenu brut du secret MAILERCHIMP_TEST_EMAIL ---')
-          print(repr(test_emails_str)) # repr() va montrer les caractères cachés comme '\n'
-          
-          # On nettoie la chaîne d'e-mails pour être plus robuste
+          print(repr(test_emails_str))
           test_emails_list = [email.strip() for email in test_emails_str.split(',') if email.strip()]
-          
           print('--- DEBUG: Liste des e-mails après nettoyage et split ---')
           print(test_emails_list)
           # --- FIN DES LOGS DE DÉBOGAGE ---
@@ -153,12 +155,8 @@ jobs:
           API_URL = f'https://{SERVER_PREFIX}.api.mailchimp.com/3.0/'
           HEADERS = {'Authorization': f'Bearer {API_KEY}', 'Content-Type': 'application/json'}
           
-          test_data = {
-              'test_emails': test_emails_list,
-              'send_type': 'html'
-          }
+          test_data = {'test_emails': test_emails_list, 'send_type': 'html'}
 
-          # --- LOG FINAL AVANT ENVOI ---
           print('--- DEBUG: Données JSON envoyées à Mailchimp ---')
           print(json.dumps(test_data, indent=2))
           
@@ -166,7 +164,6 @@ jobs:
               requests.post(f'{API_URL}/campaigns/{CAMPAIGN_ID}/actions/test', headers=HEADERS, json=test_data).raise_for_status()
               print(f'Email de test envoyé avec succès à : {test_emails_list}')
           except Exception as e:
-              # Affiche la réponse complète de l'API en cas d'erreur
               if hasattr(e, 'response') and e.response is not None:
                   print('--- ERREUR DÉTAILLÉE DE L\'API MAILCHIMP ---')
                   print(e.response.text)
@@ -215,35 +212,39 @@ jobs:
           CAMPAIGN_ID = os.environ.get('CAMPAIGN_ID')
           API_URL = f'https://{SERVER_PREFIX}.api.mailchimp.com/3.0/'
           HEADERS = {'Authorization': f'Bearer {API_KEY}'}
-          print(f'Le déploiement a été rejeté. Suppression de la campagne brouillon ID : {CAMPAIGN_ID}')
+          print(f'Déploiement rejeté. Suppression du brouillon ID : {CAMPAIGN_ID}')
           try:
               requests.delete(f'{API_URL}/campaigns/{CAMPAIGN_ID}', headers=HEADERS).raise_for_status()
-              print('Campagne brouillon supprimée avec succès de Mailchimp.')
+              print('Campagne brouillon supprimée avec succès.')
           except Exception as e:
-              print(f'Erreur lors de la suppression de la campagne brouillon : {e}')
+              print(f'Erreur lors de la suppression : {e}')
           "
 
-  # TÂCHE 3 : CONSTRUIRE LE SITE WEB STATIQUE
+  # TÂCHE 3 : CONSTRUCTION DU SITE
   build_site:
-    name: 3. Construire le Site (GitHub Pages)
+    name: 3. Construire le Site
     needs: send_final_email
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
+      
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-  # TÂCHE 4 : DÉPLOYER LE SITE WEB STATIQUE
-  deploy_site:
-    name: 4. Déployer le Site (GitHub Pages)
+  # TÂCHE 4 : DÉPLOIEMENT SUR GITHUB PAGES
+  deploy_to_github_pages:
+    name: 4. Déployer sur GitHub Pages
     needs: build_site
     runs-on: ubuntu-latest
     environment:
@@ -254,32 +255,25 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
-        
-  # --- TÂCHE DE DÉPLOIEMENT MODIFIÉE ---
-  # TÂCHE 5 : DÉPLOYER LE SITE SUR OVH (VIA SSH/RSYNC)
+  # TÂCHE 5 : DÉPLOIEMENT SUR OVH
   deploy_to_ovh:
-    name: 4. Déployer le Site (OVH via SSH)
-    needs: deploy_site
+    name: 5. Déployer sur OVH (via SSH)
+    needs: deploy_to_github_pages # S'exécute après le déploiement sur GitHub Pages
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
+        # L'action upload-pages-artifact crée un artefact nommé "github-pages"
+        # On télécharge cet artefact spécifique.
         uses: actions/download-artifact@v4
         with:
-          name: jekyll-site
-          path: ./_site
+          name: github-pages
 
       - name: Deploy to Server via Rsync
         uses: easingthemes/ssh-deploy@v5.0.0
         with:
-          # Clé privée SSH depuis les secrets
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          # Adresse du serveur
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
-          # Nom d'utilisateur
           REMOTE_USER: ${{ secrets.SSH_USER }}
-          # Dossier source à envoyer
-          SOURCE: "_site/"
-          # Dossier de destination sur le serveur
+          SOURCE: "./" # Le contenu de l'artefact est téléchargé à la racine
           TARGET: ${{ secrets.REMOTE_PATH }}
-          # Exclure des fichiers si nécessaire
           EXCLUDE: "/.git/, /.github/"
